// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Strong checkGrammar 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong checkGrammar 2`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong checkGrammar 3`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong checkGrammar 4`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong checkHighlight 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong checkHighlight 2`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong checkHighlight 3`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong checkHighlight 4`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong checkSpaces 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong checkSpaces 2`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong checkSpaces 3`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong checkSpaces 4`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong className 1`] = `
<strong
  className="uu5-bricks-strong my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong content 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</strong>
`;

exports[`UU5.Bricks.Strong content 2`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</strong>
`;

exports[`UU5.Bricks.Strong content 3`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</strong>
`;

exports[`UU5.Bricks.Strong content 4`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</strong>
`;

exports[`UU5.Bricks.Strong controlled 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong controlled 2`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong controlled 3`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong controlled 4`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong default props 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong disabled 1`] = `
<strong
  className="uu5-bricks-strong uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</strong>
`;

exports[`UU5.Bricks.Strong disabled 2`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong disabled 3`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong disabled 4`] = `
<strong
  className="uu5-bricks-strong uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</strong>
`;

exports[`UU5.Bricks.Strong docKit examples UU5.Bricks.Strong should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <P
    className={null}
    content="This is normal text"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    key="uuID02"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <P
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID03"
    ignoreInnerHTML={false}
    key="uuID03"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  >
    This is 
    <Strong
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID04"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      important
    </Strong>
     text
  </P>
</div>
`;

exports[`UU5.Bricks.Strong dynamic 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong dynamic 2`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong dynamic 3`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong dynamic 4`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong hidden 1`] = `
<strong
  className="uu5-bricks-strong uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong hidden 2`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong hidden 3`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong hidden 4`] = `
<strong
  className="uu5-bricks-strong uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong id 1`] = `
<strong
  className="uu5-bricks-strong"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong ignoreHTML 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong ignoreHTML 2`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong ignoreHTML 3`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong ignoreHTML 4`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong mainAttrs 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong name 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong noIndex 1`] = `
<strong
  className="uu5-bricks-strong uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong noIndex 2`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong noIndex 3`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong noIndex 4`] = `
<strong
  className="uu5-bricks-strong uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong selected 1`] = `
<strong
  className="uu5-bricks-strong uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong selected 2`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong selected 3`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong selected 4`] = `
<strong
  className="uu5-bricks-strong uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong style 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Strong style 2`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Strong style 3`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Strong style 4`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Strong textCorrector 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong textCorrector 2`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong textCorrector 3`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong textCorrector 4`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Strong tooltip 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
